enhancement: simplify tenantId binding in MultiValueMemberMapperAction